--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -26,7 +26,7 @@ body {
 }
 
 .auth-header {
-    background-color: #ff4b2b;
+    background-color: #980000;
     padding: 15px;
     position: relative;
     display: flex;
@@ -79,7 +79,7 @@ body {
 
 .input-field:focus {
     outline: none;
-    border-color: #ff4b2b;
+    border-color: #980000;
 }
 
 .password-field-container {
@@ -97,7 +97,7 @@ body {
 .submit-button {
     width: 100%;
     padding: 14px;
-    background-color: #ff4b2b;
+    background-color: #980000;
     color: white;
     border: none;
     border-radius: 6px;
@@ -117,7 +117,7 @@ body {
 }
 
 .forgot-password a {
-    color: #ff4b2b;
+    color: #980000;
     text-decoration: none;
     font-size: 14px;
 }
@@ -170,7 +170,7 @@ body {
 }
 
 .register-prompt a {
-    color: #ff4b2b;
+    color: #980000;
     text-decoration: none;
     font-weight: bold;
 }
@@ -183,7 +183,7 @@ body {
 }
 
 .login-prompt a {
-    color: #ff4b2b;
+    color: #980000;
     text-decoration: none;
     font-weight: bold;
 }
@@ -204,8 +204,8 @@ body {
 }
 
 .tab.active {
-    color: #ff4b2b;
-    border-bottom: 2px solid #ff4b2b;
+    color: #980000;
+    border-bottom: 2px solid #980000;
 }
 
 .terms-checkbox {
@@ -225,7 +225,7 @@ body {
 }
 
 .terms-text a {
-    color: #ff4b2b;
+    color: #980000;
     text-decoration: none;
 }
 
