--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .header {
-    background-color: #ff4b2b;
+    background-color: #980000;
     padding: 10px 15px;
     position: sticky;
     top: 0;
@@ -53,7 +53,7 @@ body {
 }
 
 .search-icon {
-    color: #ff4b2b;
+    color: #980000;
     font-size: 20px;
     margin-right: 10px;
 }
@@ -67,7 +67,7 @@ body {
 }
 
 .camera-icon {
-    color: #ff4b2b;
+    color: #980000;
 }
 .cart-icon,
 .message-icon {
@@ -85,7 +85,7 @@ body {
     top: -8px;
     right: -8px;
     background-color: white;
-    color: #ff4b2b;
+    color: #980000;
     border-radius: 50%;
     width: 18px;
     height: 18px;
@@ -104,7 +104,7 @@ body {
 
 /* greeting */
 .greeting {
-    color: #ff4b2b;
+    color: #980000;
     font-size: 14px;
     font-weight: bold;
     padding: 5px 10px;
@@ -148,7 +148,7 @@ body {
 }
 
 .view-all {
-    color: #ff4b2b;
+    color: #980000;
     font-size: 14px;
     text-decoration: none;
 }
@@ -198,7 +198,7 @@ body {
 }
 
 .slide-price {
-    color: #ff4b2b;
+    color: #980000;
     font-size: 14px;
     font-weight: bold;
 }
@@ -276,7 +276,7 @@ body {
     position: absolute;
     top: 10px;
     right: 10px;
-    background-color: #ff4b2b;
+    background-color: #980000;
     color: white;
     padding: 3px 6px;
     border-radius: 4px;
@@ -298,7 +298,7 @@ body {
 }
 
 .product-price {
-    color: #ff4b2b;
+    color: #980000;
     font-size: 18px;
     font-weight: bold;
 }
@@ -325,17 +325,17 @@ body {
 }
 
 .tag-red {
-    background-color: #ff4b2b;
+    background-color: #980000;
     color: white;
 }
 
 .tag-outline {
-    border: 1px solid #ff4b2b;
-    color: #ff4b2b;
+    border: 1px solid #980000;
+    color: #980000;
 }
 
 .live-tag {
-    background-color: #ff4b2b;
+    background-color: #980000;
     color: white;
     padding: 2px 6px;
     border-radius: 4px;
@@ -389,7 +389,7 @@ body {
 }
 
 .active {
-    color: #ff4b2b;
+    color: #980000;
 }
 
 .notification-badge {
@@ -400,7 +400,7 @@ body {
     position: absolute;
     top: -5px;
     right: -5px;
-    background-color: #ff4b2b;
+    background-color: #980000;
     color: white;
     border-radius: 50%;
     width: 18px;
@@ -454,7 +454,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #ff4b2b;
+    color: #980000;
     font-size: 24px;
     margin-bottom: 5px;
 }
@@ -536,9 +536,9 @@ body {
 }
 
 .filter-button.active {
-    background-color: #ff4b2b;
+    background-color: #980000;
     color: white;
-    border-color: #ff4b2b;
+    border-color: #980000;
 }
 
 .sort-button {
